--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
 # production api
 NEXT_PUBLIC_API_URL=https://api.skip.money/v1
+NEXT_PUBLIC_API_EVM_URL=
 
 # development API
 # NEXT_PUBLIC_API_URL=https://solve-dev.skip.money/v1
