--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@injectivelabs/sdk-ts": "^1.11.0",
     "@injectivelabs/utils": "^1.11.0",
     "@keplr-wallet/types": "^0.12.4",
+    "@tanstack/query-core": "^4.2.1",
+    "@lukemorales/query-key-factory": "^1.2.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
@@ -49,16 +51,18 @@
     "chain-registry": "^1.18.0",
     "classnames": "^2.3.2",
     "cosmjs-types": "^0.7.2",
+    "jotai": "^1.8.0",
+    "jotai-tanstack-query": "^0.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "ethers": "^6.3.0",
     "framer-motion": "^10.12.18",
     "http-proxy": "^1.18.1",
-    "next": "13.4.7",
+    "next": "^13.4.19",
     "pino-pretty": "^10.0.0",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
     "usehooks-ts": "^2.9.1"
   },
