--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.2",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.9.1",
+    "react-query": "^3.34.19"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
