--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@injectivelabs/sdk-ts": "^1.11.0",
     "@injectivelabs/utils": "^1.11.0",
     "@keplr-wallet/types": "^0.12.4",
-    "@tanstack/query-core": "^4.2.1",
     "@lukemorales/query-key-factory": "^1.2.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@tanstack/query-core": "^4.2.1",
     "@tanstack/react-query": "^4.29.5",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
@@ -51,28 +51,30 @@
     "chain-registry": "^1.18.0",
     "classnames": "^2.3.2",
     "cosmjs-types": "^0.7.2",
-    "jotai": "^1.8.0",
-    "jotai-tanstack-query": "^0.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "ethers": "^6.7.1",
     "framer-motion": "^10.12.18",
     "http-proxy": "^1.18.1",
+    "jotai": "^1.8.0",
+    "jotai-tanstack-query": "^0.4.0",
     "next": "^13.4.19",
     "pino-pretty": "^10.0.0",
     "postcss": "8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.34.19",
     "tailwindcss": "3.3.2",
-    "usehooks-ts": "^2.9.1",
-    "react-query": "^3.34.19"
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@evmos/address-converter": "^0.1.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/http-proxy": "^1.17.11",
     "@types/jest": "^29.5.3",
     "@types/testing-library__jest-dom": "^5.14.5",
+    "bech32": "^2.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "msw": "^1.2.3",
